# maharshpatelx.github.io

./: .gitignore  README.md  app.py  config.py  extensions.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  wsgi.py
routes/: __init__.py  admin.py  api.py  auth.py  content.py  public.py
src/: App.js
src/components/: SaasChat.js
static/: script.js  styles.css
templates/: about.html  base.html  index.html  login.html  project_detail.html  projects.html  resume.html
templates/admin/: base.html  dashboard.html  education.html  experiences.html  messages.html  profile.html  projects.html  skills.html  technologies.html
templates/errors/: 403.html  404.html  500.html
utils/: __init__.py  auth.py  db_init.py  file_handlers.py
