[tool.poetry]
name = "full-application"
version = "0.1.0"
description = "A full-stack Flask application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # Disables package mode if you only need dependency management

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.1.0"
flask-pymongo = "^3.0.1"
werkzeug = "^3.1.3"
pymongo = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"